# cheetah_inekf_realtime

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: interface.yaml  noise.yaml  settings.yaml
include/: pose_publisher_node.hpp  state_publisher_node.hpp
include/communication/: KinematicsHandler.hpp  LcmHandler.hpp  kinematics_handler.hpp  lcm_handler.hpp
include/communication/lcm-types/: contact_t.hpp  imu_t.hpp  leg_control_command_lcmt.hpp  leg_control_data_lcmt.hpp  legcontrol_t.hpp  (+1 more)
include/estimator/: BodyEstimator.hpp  body_estimator.hpp
include/system/: #CheetahState.hpp#  .#CheetahState.hpp  CheetahState.hpp  CheetahSystem.hpp  cheetah_state.hpp  cheetah_system.hpp
include/utils/: PassiveTimeSync.h  cheetah_data_t.hpp  contacts.hpp  imu.hpp  joint_state.hpp  kinematics.hpp  measurement.h
inekf/: settings.yaml
launch/: cheetah_estimator.launch
lcm/: contact_t.lcm  file_list.txt  imu_t.lcm  kinematic_t.lcm  legcontrol_t.lcm  path_t.lcm  wbc_lcm_data_t.lcm
lcm/cheetah_inekf_lcm/: __init__.py  contact_t.java  imu_t.java  imu_t.py  kinematic_t.java  kinematic_t.py  legcontrol_t.java  legcontrol_t.py  pose_t.java  pose_t.py  synced_proprioceptive_lcmt.java  synced_proprioceptive_lcmt.py
rviz/: inekf_test.rviz
scripts/: make_types.sh
src/: cheetah_controller.cpp  cheetah_estimator.cpp  path_publisher_node.cpp  pose_publisher_node.cpp  state_publisher_node.cpp
src/communication/: LcmHandler.cpp  lcm_handler.cpp
src/estimator/: body_estimator.cpp
src/system/: cheetah_state.cpp  cheetah_system.cpp
src/utils/: measurement.cpp
(+7 files in other folders)
