<?xml version="1.0"?>
<package format="2">
    <name>cheetah_inekf_lcm</name>
    <version>0.0.0</version>
    <description>The Mini Cheetah invariant-ekf package</description>
    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="arthurzh@umich.edu">Arthur</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <!-- <depend>inekf_msgs</depend> -->
    <depend>tf</depend>
    <buildtool_depend>catkin</buildtool_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>